--- a/_config.yml
+++ b/_config.yml
@@ -10,18 +10,18 @@
 locale                   : "en-US"
 title                    : "Yan Ma"
 title_separator          : "-"
-name                     : &name "Your Name"
+name                     : &name "Yan Ma"
 description              : &description "personal description"
 url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "ILoveCorn/ILoveCorn.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "Avatar_cat.png"
+  avatar           : "Avatar_cat.jpg"
   name             : "Yan Ma"
   pronouns         : # example: "she/her"  
   bio              : #
