--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "ILoveCorn/ILoveCorn.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "Avatar_cat.jpg"
+  avatar           : "bio-photo.jpg"
   name             : "Yan Ma"
   pronouns         : # example: "she/her"  
   bio              : #
