--- a/_config.yml
+++ b/_config.yml
@@ -11,10 +11,10 @@ locale                   : "en-US"
 title                    : "Yan Ma"
 title_separator          : "-"
 name                     : &name "Yan Ma"
-description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+description              : &description "PhD student at the Chinese University of Hong Kong"
+url                      : https://ILoveCorn.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "ILoveCorn/ILoveCorn.github.io"
+repository               : # "ILoveCorn/ILoveCorn.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
