--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   name             : "Yan Ma"
   pronouns         : # example: "she/her"  
   bio              : #
-  location         : "Hong Kong"
+  location         : #
   employer         : "The Chinese University of Hong Kong"
   uri              : # URL
   email            : "yanma@link.cuhk.edu.hk" 
