--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Yan Ma"
-title_separator          : "-"
+title                    : # "Yan Ma"
+title_separator          : # "-"
 name                     : &name "Yan Ma"
 description              : &description "PhD student at the Chinese University of Hong Kong"
 url                      : https://ILoveCorn.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
@@ -85,7 +85,7 @@ publication_category:
 
 # Site Settings
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
-breadcrumbs              : true # true, false (default)
+breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
 future                   : false
 read_more                : "disabled" # if enabled, adds "Read more" links to excerpts
