--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : # "Yan Ma"
+title                    : "Yan Ma"
 title_separator          : # "-"
 name                     : &name "Yan Ma"
 description              : &description "PhD student at the Chinese University of Hong Kong"
@@ -26,7 +26,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : #
   location         : #
-  employer         : "The Chinese University of Hong Kong"
+  employer         : #
   uri              : # URL
   email            : "yanma@link.cuhk.edu.hk" 
 
